--- a/challenges/src/components/estilos.css
+++ b/challenges/src/components/estilos.css
@@ -1,26 +1,31 @@
 nav {
-    background-color: #585858;
-    padding: 10px;
-  }
-  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  li {
-    margin-right: 20px;
-  }
-  
-  a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-  }
-  
-  a:hover {
-    color: rgb(132, 213, 224);
-  }
-  
+  background-color: #585858;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav {
+  background-color: #aaa;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+li {
+  margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+a:hover {
+  color: rgb(132, 213, 224);
+}
